extract github config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.port = 8080
+github.client.id = dd8ead2d4448fd960a87
+github.client.secret = 1801ebd032a2de5590ed735efbab364b6d91183d
+github.redirect.uri = http://localhost:8080/callback
