--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port = 8080
 github.client.id = dd8ead2d4448fd960a87
 github.client.secret = 1801ebd032a2de5590ed735efbab364b6d91183d
 github.redirect.uri = http://localhost:8080/callback
+spring.datasource.url=jdbc:mysql://locahost:3306/db1
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
